--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="lb_login">Login</string>
     <string name="lb_account">Account</string>
     <string name="lb_password">Password</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="lb_atmid">ATMID</string>
+    <string name="lb_location">Location</string>
+    <string name="lb_issue">Issue</string>
+    <string name="lb_bank">Bank</string>
 </resources>
