--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="lb_partname">Part Name</string>
     <string name="lb_quantity">Quantity</string>
     <string name="lb_store">Store</string>
+    <string name="desImgCap">Image view</string>
+    <string name="lb_photo_gallery">Photo Gallery</string>
+    <string name="lb_take_photo">Take Photo</string>
 </resources>
