add read sms permission

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="desImgCap">Image view</string>
     <string name="lb_photo_gallery">Photo Gallery</string>
     <string name="lb_take_photo">Take Photo</string>
+    abc
 </resources>
