--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="desImgCap">Image view</string>
     <string name="lb_photo_gallery">Photo Gallery</string>
     <string name="lb_take_photo">Take Photo</string>
+    <string name="btn_ok">Ok</string>
     <string name="lb_scan">Scan</string>
     <string name="radio_inbox">Inbox</string>
     <string name="radio_outbox">Outbox</string>
