--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="radio_inbox">Inbox</string>
     <string name="radio_outbox">Outbox</string>
     <string name="lb_submit">Submit</string>
-    <string name="title_hint">Nhap tin nhan</string>
+    <string name="title_hint">Nhập tin nhắn</string>
     <string name="title_talk_to_leader">Talk To Leadern</string>
 
 </resources>
