add close service add listenner for http get

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,8 @@
     <string name="lb_submit">Submit</string>
     <string name="title_hint">Nhập tin nhắn</string>
     <string name="title_talk_to_leader">Talk To Leadern</string>
+    <string name="lb_from">From</string>
+    <string name="lb_to">To</string>
+    <string name="lb_search">Search</string>
 
 </resources>
